--- a/notebooks/visualizations.ipynb
+++ b/notebooks/visualizations.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,21 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Path' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# helper functions\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mdownload_extract_gdp_data\u001b[39m(url = \u001b[33m'\u001b[39m\u001b[33mhttps://api.worldbank.org/v2/en/indicator/NY.GDP.MKTP.PP.CD?downloadformat=csv\u001b[39m\u001b[33m'\u001b[39m, destination_file : Path = \u001b[43mPath\u001b[49m(\u001b[33m'\u001b[39m\u001b[33m../data/gdp_ppp.csv\u001b[39m\u001b[33m'\u001b[39m))-> \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m      3\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[33;03m    Download and extract GDP data from the World Bank API.\u001b[39;00m\n\u001b[32m      5\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m     11\u001b[39m \u001b[33;03m    None\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m     13\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mDownloading data from the World Bank API \u001b[39m\u001b[38;5;132;01m{\u001b[39;00murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdestination_file\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m ...\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'Path' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# helper functions\n",
     "def download_extract_gdp_data(url = 'https://api.worldbank.org/v2/en/indicator/NY.GDP.MKTP.PP.CD?downloadformat=csv', destination_file : Path = Path('../data/gdp_ppp.csv'))-> None:\n",
@@ -75,14 +63,43 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ccf81c136c144b53b5fbceb0428a9bce",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Country:', options=('Aruba', 'Africa Eastern and Southern', 'Afghanistan', 'Africa Weste…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9a9644a67dec492485b4c0294b14fc95",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# check if data folder has the gdp-ppp csv file\n",
     "# if not, download it from the World Bank API\n",
     "\n",
     "data_folder = Path(\"../data\")\n",
     "data_folder.mkdir(exist_ok=True)\n",
-    "csv_file = data_folder.joinpath(\"gdp_ppp.csv\")\n",
+    "csv_file = data_folder.joinpath(\"gdp_pcap_ppp.csv\")\n",
     "#TODO: look at the lates data on the World Bank API and compare its metadata with the one in the csv file, \n",
     "# if they are different, download the new csv file\n",
     "if not csv_file.exists():\n",
@@ -92,6 +109,8 @@
     "# ask the user for the country name\n",
     "# get the list of countries from the dataframe\n",
     "countries = df['Country Name'].unique()\n",
+    "# sort the countries alphabetically\n",
+    "countries = sorted(countries)\n",
     "# create a dropdown widget for the country name\n",
     "country_dropdown = widgets.Dropdown(\n",
     "    options=countries,\n",
@@ -126,7 +145,7 @@
     "    plt.plot(country_data.index, country_data.values)\n",
     "    plt.title(f\"GDP per capita in {country_name}\")\n",
     "    plt.xlabel('Year')\n",
-    "    plt.ylabel('GDP per capita (PPP)')\n",
+    "    plt.ylabel('GDP per capita (PPP), (current international $)')\n",
     "    plt.xticks(rotation=45)\n",
     "    plt.grid()\n",
     "    plt.show()\n",
@@ -158,30 +177,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dropdown = widgets.Dropdown(\n",
-    "    options=['France', 'Germany', 'Russia'],\n",
-    "    value='France',\n",
-    "    description='Country:',\n",
-    ")\n",
-    "\n",
-    "# Create an output area (safe place for dynamic prints)\n",
-    "output = widgets.Output()\n",
-    "\n",
-    "# Update function\n",
-    "def update_selected(change):\n",
-    "    with output:\n",
-    "        clear_output(wait=True)\n",
-    "        print(\"Selected country:\", change['new'])\n",
-    "\n",
-    "# Bind and display once\n",
-    "dropdown.observe(update_selected, names='value')\n",
-    "display(dropdown, output)\n",
-    "\n",
-    "# Show the initial selection\n",
-    "with output:\n",
-    "    print(\"Selected country:\", dropdown.value)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -193,7 +189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
