--- a/notebooks/visualizations.ipynb
+++ b/notebooks/visualizations.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,18 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccf81c136c144b53b5fbceb0428a9bce",
+       "model_id": "667e65c35dfd43359ba11f7e9b39cccd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='Country:', options=('Aruba', 'Africa Eastern and Southern', 'Afghanistan', 'Africa Weste…"
+       "Dropdown(description='Country:', options=('Afghanistan', 'Africa Eastern and Southern', 'Africa Western and Ce…"
       ]
      },
      "metadata": {},
@@ -81,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a9644a67dec492485b4c0294b14fc95",
+       "model_id": "ddc7f755244046e4a93612109af7f493",
        "version_major": 2,
        "version_minor": 0
       },
@@ -142,13 +142,24 @@
     "    #drop the missing values\n",
     "    country_data = country_data.dropna()\n",
     "    # plot the data as a line chart\n",
-    "    plt.plot(country_data.index, country_data.values)\n",
+    "    plt.figure(figsize=(12, 8))\n",
+    "    plt.plot(country_data.index, country_data.values, marker='o', linestyle='-', color='violet')\n",
     "    plt.title(f\"GDP per capita in {country_name}\")\n",
     "    plt.xlabel('Year')\n",
     "    plt.ylabel('GDP per capita (PPP), (current international $)')\n",
     "    plt.xticks(rotation=45)\n",
     "    plt.grid()\n",
     "    plt.show()\n",
+    "    \n",
+    "    ##create a bar chart of the GDP data\n",
+    "    #plt.figure(figsize=(12, 8))\n",
+    "    #plt.bar(country_data.index, country_data.values, color='violet')\n",
+    "    #plt.title(f\"GDP per capita in {country_name}\")\n",
+    "    #plt.xlabel('Year')\n",
+    "    #plt.ylabel('GDP per capita (PPP), (current international $)')\n",
+    "    #plt.xticks(rotation=45)\n",
+    "    #plt.grid()\n",
+    "    #plt.show()\n",
     "    \n",
     "    \n",
     "    \n",
@@ -176,8 +187,142 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0a3c19384faa47fbaf19e9ce63dee79c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Year 1:', options=('1960', '1961', '1962', '1963', '1964', '1965', '1966', '1967', '1968…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "13b87a13b4e7446c89034b203d671e84",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Year 2:', options=('1960', '1961', '1962', '1963', '1964', '1965', '1966', '1967', '1968…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "072e2a61b7364feda474b767c24b7b52",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='Display GDP Change', icon='check', style=ButtonStyle(), tooltip='C…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ddc7f755244046e4a93612109af7f493",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#add a widget to select two years and display a bar diagram for countiries' gdp change (%) between the selected years\n",
+    "def display_gdp_change(year1:int, year2:int)->None:   \n",
+    "    \"\"\"\n",
+    "    Display the GDP change between two selected years for all the countires.\n",
+    "    This function filters the dataframe for the two selected years and calculates the percentage change in GDP.\n",
+    "    It then plots the data as a bar chart.\n",
+    "    The function takes two parameters: year1 and year2, which are the years to compare.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    year1 (int): The first year to compare.\n",
+    "    year2 (int): The second year to compare.\n",
+    "    \n",
+    "    Returns:\n",
+    "    None\n",
+    "    \"\"\"\n",
+    "    # filter the data frame for the two selected years  \n",
+    "    # get the list of countries from the dataframe\n",
+    "    countries = df['Country Name'].unique()   \n",
+    "    # sort the countries alphabetically\n",
+    "    countries = sorted(countries)\n",
+    "    # filter the dataframe for the two selected years\n",
+    "    gdp_change = df[['Country Name', str(year1), str(year2)]]\n",
+    "    gdp_change = gdp_change.rename(columns={year1: 'Year1', year2: 'Year2'})\n",
+    "    gdp_change = gdp_change.dropna()\n",
+    "    # calculate the percentage change between the two years\n",
+    "    gdp_change['Change (%)'] = ((gdp_change['Year2'] - gdp_change['Year1']) / gdp_change['Year1']) * 100\n",
+    "    # sort the data frame by the percentage change\n",
+    "    gdp_change = gdp_change.sort_values(by='Change (%)', ascending=False)\n",
+    "    # plot the data as a bar chart\n",
+    "    plt.figure(figsize=(20, 8))\n",
+    "    plt.bar(gdp_change['Country Name'], gdp_change['Change (%)'], color='violet')\n",
+    "    plt.title(f\"GDP Change from {year1} to {year2}\")\n",
+    "    plt.xlabel('Country')\n",
+    "    plt.ylabel('GDP Change (%)')\n",
+    "    plt.xticks(rotation=45)\n",
+    "    plt.grid()\n",
+    "    plt.show()\n",
+    "# create a dropdown widget for the years\n",
+    "# get the list of years from the dataframe that have data\n",
+    "years = [y for y in df.columns[4:].unique() if df[y].notna().any()]\n",
+    "# sort the years\n",
+    "years = sorted(years)\n",
+    "year1_dropdown = widgets.Dropdown(\n",
+    "    options=years,\n",
+    "    description='Year 1:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "year2_dropdown = widgets.Dropdown(\n",
+    "    options=years,\n",
+    "    description='Year 2:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "# create a button to display the GDP change\n",
+    "gdp_change_button = widgets.Button(\n",
+    "    description='Display GDP Change',\n",
+    "    button_style='success',\n",
+    "    tooltip='Click to display GDP change',\n",
+    "    icon='check'\n",
+    ")\n",
+    "# bind the button to the display_gdp_change function\n",
+    "def on_button_click(b):\n",
+    "    \"\"\"\n",
+    "    Handle the button click event to display GDP change.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    b (Button): The button that was clicked.\n",
+    "    \n",
+    "    Returns:\n",
+    "    None\n",
+    "    \"\"\"\n",
+    "    with output:\n",
+    "        clear_output(wait=True)\n",
+    "        display_gdp_change(str(year1_dropdown.value), str(year2_dropdown.value))\n",
+    "gdp_change_button.on_click(on_button_click)\n",
+    "# display the dropdown widgets and the button\n",
+    "display(year1_dropdown, year2_dropdown, gdp_change_button, output)"
+   ]
   },
   {
    "cell_type": "code",
