--- a/notebooks/visualizations.ipynb
+++ b/notebooks/visualizations.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,9 +61,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "09d1d928ac1a40a5a696335990e6e212",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Country:', options=('Afghanistan', 'Africa Eastern and Southern', 'Africa Western and Ce…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4db09651113b48f8930669a628cea475",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# check if data folder has the gdp-ppp csv file\n",
     "# if not, download it from the World Bank API\n",
@@ -115,9 +144,9 @@
     "    # plot the data as a line chart\n",
     "    plt.figure(figsize=(12, 8))\n",
     "    plt.plot(country_data.index, country_data.values, marker='o', linestyle='-', color='violet')\n",
-    "    plt.title(f\"GDP per capita in {country_name}\")\n",
+    "    plt.title(f\"GDP per capita (PPP) in {country_name}\")\n",
     "    plt.xlabel('Year')\n",
-    "    plt.ylabel('GDP per capita (PPP), (current international $)')\n",
+    "    plt.ylabel('GDP per capita (current international $)')\n",
     "    plt.xticks(rotation=45)\n",
     "    plt.grid()\n",
     "    plt.show()\n",
@@ -156,9 +185,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7d8656b84b1941adbe2c28b80ea63c33",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Year 1:', options=('1990', '1991', '1992', '1993', '1994', '1995', '1996', '1997', '1998…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7f605dca8f4841c696d7dae889fa447e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Year 2:', options=('1990', '1991', '1992', '1993', '1994', '1995', '1996', '1997', '1998…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "000df06d8cc94e70a63c31ddb7b5752b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='Display GDP Change', icon='check', style=ButtonStyle(), tooltip='C…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4db09651113b48f8930669a628cea475",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#add a widget to select two years and display a bar diagram for countiries' gdp change (%) between the selected years\n",
     "#TODO: clean the county lines, make the plot readable\n",
