fix the bar plot of change in gdp

--- a/notebooks/visualizations.ipynb
+++ b/notebooks/visualizations.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,17 +23,18 @@
     "import zipfile\n",
     "from io import BytesIO\n",
     "from pathlib import Path\n",
-    "from IPython.display import clear_output, display\n"
+    "from IPython.display import clear_output, display\n",
+    "from collections import Counter\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# helper functions\n",
-    "def download_extract_gdp_data(url = 'https://api.worldbank.org/v2/en/indicator/NY.GDP.MKTP.PP.CD?downloadformat=csv', destination_file : Path = Path('../data/gdp_ppp.csv'))-> None:\n",
+    "def download_extract_gdp_data(url = 'https://api.worldbank.org/v2/en/indicator/NY.GDP.MKTP.PP.CD?downloadformat=csv', destination_file : Path = Path('../data/gdp_pcap_ppp.csv'))-> None:\n",
     "    \"\"\"\n",
     "    Download and extract GDP data from the World Bank API.\n",
     "    \n",
@@ -56,18 +57,59 @@
     "                # save the csv file to the data folder as gdp_ppp.csv\n",
     "                print(f\"Downloaded {filename} to {destination_file}\")\n",
     "                break\n",
-    "    "
+    "            \n",
+    "def add_country_indicator(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Add a non-country indicator to the DataFrame.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    df (pd.DataFrame): The DataFrame to modify.\n",
+    "    \n",
+    "    Returns:\n",
+    "    pd.DataFrame: The modified DataFrame with an additional column indicator that the row is dedicated to a country: 1 if it is a country, 0 if it is not.\n",
+    "    \"\"\"\n",
+    "    #list of non-country codes \n",
+    "    noncountry_codes = ['AFE','AFW','ARB', 'CEB', 'CSS', 'EAP', 'EAR', 'EAS', 'ECA', 'ECS', 'EMU', \n",
+    "                    'EUU', 'FCS', 'HIC', 'HPC', 'IBD', 'IBT', 'IDA', 'IDB', 'IDX', \n",
+    "                    'INX', 'LAC', 'LCN', 'LDC', 'LIC', 'LMC', 'LMY', 'LTE', 'MEA', \n",
+    "                    'MIC', 'MNA', 'NAC', 'OED', 'OSS', 'PRE', 'PSS', 'PST', 'SAS', \n",
+    "                    'SSA', 'SSF', 'SST', 'TEA', 'TEC', 'TLA', 'TMN', 'TSA', 'TSS',\n",
+    "                    'UMC', 'WLD']\n",
+    "    # add a non-country indicator to the DataFrame\n",
+    "    df['Is Country'] = df['Country Code'].apply(lambda x: 0 if x in noncountry_codes else 1)\n",
+    "    return df\n",
+    "      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if data folder has the gdp-ppp csv file\n",
+    "# if not, download it from the World Bank API\n",
+    "\n",
+    "data_folder = Path(\"../data\")\n",
+    "data_folder.mkdir(exist_ok=True)\n",
+    "csv_file = data_folder.joinpath(\"gdp_pcap_ppp.csv\")\n",
+    "#TODO: look at the lates data on the World Bank API and compare its metadata with the one in the csv file, \n",
+    "# if they are different, download the new csv file\n",
+    "if not csv_file.exists():\n",
+    "    download_extract_gdp_data(destination_file=csv_file) \n",
+    "# read the csv file into a pandas dataframe\n",
+    "df = pd.read_csv(csv_file, skiprows=4) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09d1d928ac1a40a5a696335990e6e212",
+       "model_id": "6538ffbabd744f659045af9b80e7ff50",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +123,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4db09651113b48f8930669a628cea475",
+       "model_id": "45032c2d6e744aacb4e44fb5c54227ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,18 +136,7 @@
     }
    ],
    "source": [
-    "# check if data folder has the gdp-ppp csv file\n",
-    "# if not, download it from the World Bank API\n",
     "\n",
-    "data_folder = Path(\"../data\")\n",
-    "data_folder.mkdir(exist_ok=True)\n",
-    "csv_file = data_folder.joinpath(\"gdp_pcap_ppp.csv\")\n",
-    "#TODO: look at the lates data on the World Bank API and compare its metadata with the one in the csv file, \n",
-    "# if they are different, download the new csv file\n",
-    "if not csv_file.exists():\n",
-    "    download_extract_gdp_data(destination_file=csv_file) \n",
-    "# read the csv file into a pandas dataframe\n",
-    "df = pd.read_csv(csv_file, skiprows=4)\n",
     "# ask the user for the country name\n",
     "# get the list of countries from the dataframe\n",
     "countries = df['Country Name'].unique()\n",
@@ -121,7 +152,7 @@
     "output = widgets.Output()\n",
     "\n",
     "#create a 1-line table all available gdp data for the selected country\n",
-    "def display_country_data(country_name):\n",
+    "def display_country_data(country_name:str, df:pd.DataFrame) -> None:\n",
     "    \"\"\"\n",
     "    Display the GDP data for the selected country.\n",
     "    \n",
@@ -151,16 +182,6 @@
     "    plt.grid()\n",
     "    plt.show()\n",
     "    \n",
-    "    ##create a bar chart of the GDP data\n",
-    "    #plt.figure(figsize=(12, 8))\n",
-    "    #plt.bar(country_data.index, country_data.values, color='violet')\n",
-    "    #plt.title(f\"GDP per capita in {country_name}\")\n",
-    "    #plt.xlabel('Year')\n",
-    "    #plt.ylabel('GDP per capita (PPP), (current international $)')\n",
-    "    #plt.xticks(rotation=45)\n",
-    "    #plt.grid()\n",
-    "    #plt.show()\n",
-    "    \n",
     "    \n",
     "    \n",
     "# a function to update the table when the country is changed\n",
@@ -176,7 +197,7 @@
     "    \"\"\"\n",
     "    with output:\n",
     "        clear_output(wait=True)\n",
-    "        display_country_data(change['new'])\n",
+    "        display_country_data(change['new'],df)\n",
     "# bind the update function to the dropdown widget\n",
     "country_dropdown.observe(update_country_data, names='value')\n",
     "# display the dropdown widget\n",
@@ -185,13 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d8656b84b1941adbe2c28b80ea63c33",
+       "model_id": "3fd4861b9486403a9e26999f4dd3c0d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -205,7 +226,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f605dca8f4841c696d7dae889fa447e",
+       "model_id": "ce3442979aa149d884434987581a791d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -219,7 +240,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "000df06d8cc94e70a63c31ddb7b5752b",
+       "model_id": "033ba3eec59146e993d4ea6b51ca17f5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=10, continuous_update=False, description='Number of bins:', max=25, min=1)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2253b5b17f1d4f9eb5ce1770360d537c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -233,7 +268,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4db09651113b48f8930669a628cea475",
+       "model_id": "45032c2d6e744aacb4e44fb5c54227ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -246,44 +281,59 @@
     }
    ],
    "source": [
-    "#add a widget to select two years and display a bar diagram for countiries' gdp change (%) between the selected years\n",
-    "#TODO: clean the county lines, make the plot readable\n",
-    "def display_gdp_change(year1:int, year2:int)->None:   \n",
+    "#TODO round the edges to 5 or 10 persentiles\n",
+    "#add a widget to select two years and display a hystogram for countiries' gdp change (%) between the selected years\n",
+    "def display_gdp_change(year1:str, year2:str, num_bins:int, df:pd.DataFrame)->None:   \n",
     "    \"\"\"\n",
     "    Display the GDP change between two selected years for all the countires.\n",
     "    This function filters the dataframe for the two selected years and calculates the percentage change in GDP.\n",
-    "    It then plots the data as a bar chart.\n",
+    "    It then calculates a hystogram of the percentage change and displays it as a bar chart.\n",
     "    The function takes two parameters: year1 and year2, which are the years to compare.\n",
     "    \n",
     "    Parameters:\n",
     "    year1 (int): The first year to compare.\n",
     "    year2 (int): The second year to compare.\n",
+    "    num_bins (int): The number of bins to use for the histogram.\n",
+    "    df (pd.DataFrame): The DataFrame to use for the comparison.\n",
     "    \n",
     "    Returns:\n",
     "    None\n",
     "    \"\"\"\n",
-    "    # filter the data frame for the two selected years  \n",
-    "    # get the list of countries from the dataframe\n",
-    "    countries = df['Country Name'].unique()   \n",
-    "    # sort the countries alphabetically\n",
-    "    countries = sorted(countries)\n",
+    "    #add a non-country indicator to the DataFrame\n",
+    "    df = add_country_indicator(df)\n",
+    "    #filter the dataframe for the non-country rows\n",
+    "    df = df[df['Is Country'] == 0]\n",
     "    # filter the dataframe for the two selected years\n",
-    "    gdp_change = df[['Country Name', str(year1), str(year2)]]\n",
+    "    gdp_change = df[['Country Name', year1, year2]]\n",
     "    gdp_change = gdp_change.rename(columns={year1: 'Year1', year2: 'Year2'})\n",
     "    gdp_change = gdp_change.dropna()\n",
     "    # calculate the percentage change between the two years\n",
     "    gdp_change['Change (%)'] = ((gdp_change['Year2'] - gdp_change['Year1']) / gdp_change['Year1']) * 100\n",
     "    # sort the data frame by the percentage change\n",
     "    gdp_change = gdp_change.sort_values(by='Change (%)', ascending=False)\n",
-    "    # plot the data as a bar chart\n",
-    "    plt.figure(figsize=(20, 8))\n",
-    "    plt.bar(gdp_change['Country Name'], gdp_change['Change (%)'], color='violet')\n",
-    "    plt.title(f\"GDP Change from {year1} to {year2}\")\n",
-    "    plt.xlabel('Country')\n",
-    "    plt.ylabel('GDP Change (%)')\n",
-    "    plt.xticks(rotation=45)\n",
+    "    # create a histogram of the percentage change\n",
+    "    histogram = pd.cut(gdp_change['Change (%)'],bins=num_bins)\n",
+    "    # Get the counts and sorted bins\n",
+    "    counts = histogram.value_counts().sort_index()\n",
+    "    bins = histogram.cat.categories\n",
+    "    # Compute edges and widths\n",
+    "    edges = [interval.left for interval in bins] + [bins[-1].right]\n",
+    "    left_edges = edges[:-1]\n",
+    "    widths = [interval.right - interval.left for interval in bins]\n",
+    "    \n",
+    "    plt.title(f\"GDP Change from {year1} to {year2}\")    \n",
+    "    plt.xlabel('GDP Change (%)')\n",
+    "    left_edges = [i.left for i in bins]\n",
+    "    print(\"left edges = \", left_edges)\n",
+    "    print(\"values = \", counts)\n",
+    "    plt.bar(left_edges, counts, width=widths, align='edge', color='violet')\n",
+    "    plt.xticks(edges, rotation=45)\n",
+    "    plt.title(f\"GDP Change from {year1} to {year2}\") \n",
+    "    plt.ylabel('Country count')\n",
+    "    plt.xlabel('GDP Change persentiles (%)')\n",
     "    plt.grid()\n",
     "    plt.show()\n",
+    "\n",
     "# create a dropdown widget for the years\n",
     "# get the list of years from the dataframe that have data\n",
     "years = [y for y in df.columns[4:].unique() if df[y].notna().any()]\n",
@@ -297,6 +347,16 @@
     "year2_dropdown = widgets.Dropdown(\n",
     "    options=years,\n",
     "    description='Year 2:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "#create a widget for the number of bins\n",
+    "num_bins_slider = widgets.IntSlider(\n",
+    "    value=10,\n",
+    "    min=1,\n",
+    "    max=25,\n",
+    "    step=1,\n",
+    "    description='Number of bins:',\n",
+    "    continuous_update=False,\n",
     "    disabled=False,\n",
     ")\n",
     "# create a button to display the GDP change\n",
@@ -319,10 +379,10 @@
     "    \"\"\"\n",
     "    with output:\n",
     "        clear_output(wait=True)\n",
-    "        display_gdp_change(str(year1_dropdown.value), str(year2_dropdown.value))\n",
+    "        display_gdp_change(str(year1_dropdown.value), str(year2_dropdown.value), int(num_bins_slider.value), df)\n",
     "gdp_change_button.on_click(on_button_click)\n",
     "# display the dropdown widgets and the button\n",
-    "display(year1_dropdown, year2_dropdown, gdp_change_button, output)"
+    "display(year1_dropdown, year2_dropdown, num_bins_slider, gdp_change_button, output)"
    ]
   },
   {
