enhance the functionality of gdp change visualization tool

--- a/notebooks/visualizations.ipynb
+++ b/notebooks/visualizations.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,14 @@
     "from io import BytesIO\n",
     "from pathlib import Path\n",
     "from IPython.display import clear_output, display\n",
-    "from collections import Counter\n"
+    "from collections import Counter\n",
+    "import math\n",
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,12 +80,61 @@
     "    # add a non-country indicator to the DataFrame\n",
     "    df['Is Country'] = df['Country Code'].apply(lambda x: 0 if x in noncountry_codes else 1)\n",
     "    return df\n",
-    "      "
+    " \n",
+    "def compute_allowed_bin_numbers(min_value:int, max_value:int, grain:int) -> list:\n",
+    "    \"\"\"\n",
+    "    Compute allowed bin numbers for histogram.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    min_value (int): The minimum value of the data.\n",
+    "    max_value (int): The maximum value of the data.\n",
+    "    grain (int): The minimum grain allowed.\n",
+    "    \n",
+    "    Returns:\n",
+    "    list: A list of allowed bin numbers.\n",
+    "    \"\"\"\n",
+    "    # if the range is not divisible by the grain, adjust the min value to be divisible by the grain\n",
+    "    max_value = math.ceil(max_value / grain) * grain\n",
+    "    min_value = math.floor(min_value / grain) * grain\n",
+    "    grained_range = int((max_value - min_value) / grain)\n",
+    "    \n",
+    "    return [d for d in range(1, grained_range + 1) if grained_range % d == 0]\n",
+    "\n",
+    "def compute_gdp_change() -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Compute the GDP change from 2010 to 2020 for each country.\n",
+    "    \n",
+    "    Returns:\n",
+    "    pd.DataFrame: A DataFrame containing the GDP change for each country.\n",
+    "    \"\"\"\n",
+    "    # load the data\n",
+    "    df = pd.read_csv('../data/gdp_pcap_ppp.csv', skiprows=4)\n",
+    "    \n",
+    "    # add a non-country indicator to the DataFrame\n",
+    "    df = add_country_indicator(df)\n",
+    "    \n",
+    "    # filter the DataFrame to only include countries\n",
+    "    df = df[df['Is Country'] == 1]\n",
+    "    \n",
+    "    # compute the GDP change from 2010 to 2020\n",
+    "    df['GDP Change'] = df['2020'] - df['2010']\n",
+    "    \n",
+    "    return df[['Country Code', 'Country Name', 'GDP Change']]\n",
+    "\n",
+    "def compute_gdp_change(year1:str, year2:str, df:pd.DataFrame)-> pd.DataFrame:\n",
+    "    gdp_change = df[['Country Name', year1, year2]]\n",
+    "    gdp_change = gdp_change.rename(columns={year1: 'Year1', year2: 'Year2'})\n",
+    "    gdp_change = gdp_change.dropna()\n",
+    "    # calculate the percentage change between the two years\n",
+    "    gdp_change['Change (%)'] = ((gdp_change['Year2'] - gdp_change['Year1']) / gdp_change['Year1']) * 100\n",
+    "    # sort the data frame by the percentage change\n",
+    "    gdp_change = gdp_change.sort_values(by='Change (%)', ascending=False)\n",
+    "    return gdp_change"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,13 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6538ffbabd744f659045af9b80e7ff50",
+       "model_id": "9820e9b01ea94b30b859c0b754ac98bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45032c2d6e744aacb4e44fb5c54227ba",
+       "model_id": "532880edfafa42858741dba682de97d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -206,129 +257,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fd4861b9486403a9e26999f4dd3c0d8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Year 1:', options=('1990', '1991', '1992', '1993', '1994', '1995', '1996', '1997', '1998…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce3442979aa149d884434987581a791d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Year 2:', options=('1990', '1991', '1992', '1993', '1994', '1995', '1996', '1997', '1998…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "033ba3eec59146e993d4ea6b51ca17f5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "IntSlider(value=10, continuous_update=False, description='Number of bins:', max=25, min=1)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2253b5b17f1d4f9eb5ce1770360d537c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='success', description='Display GDP Change', icon='check', style=ButtonStyle(), tooltip='C…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45032c2d6e744aacb4e44fb5c54227ba",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "TypeError",
+     "evalue": "HasTraits.observe() missing 1 required positional argument: 'handler'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 105\u001b[39m\n\u001b[32m    103\u001b[39m year2_dropdown.observe(update_bin_options, names=\u001b[33m'\u001b[39m\u001b[33mvalue\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m    104\u001b[39m grain_slider.observe(update_bin_options, names=\u001b[33m'\u001b[39m\u001b[33mvalue\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m105\u001b[39m \u001b[43mnum_bins_dropdown\u001b[49m\u001b[43m.\u001b[49m\u001b[43mobserve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnames\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mvalue\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    108\u001b[39m \u001b[38;5;66;03m# create a button to display the GDP change\u001b[39;00m\n\u001b[32m    109\u001b[39m gdp_change_button = widgets.Button(\n\u001b[32m    110\u001b[39m     description=\u001b[33m'\u001b[39m\u001b[33mDisplay GDP Change\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    111\u001b[39m     button_style=\u001b[33m'\u001b[39m\u001b[33msuccess\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    112\u001b[39m     tooltip=\u001b[33m'\u001b[39m\u001b[33mClick to display GDP change\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    113\u001b[39m     icon=\u001b[33m'\u001b[39m\u001b[33mcheck\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m    114\u001b[39m )\n",
+      "\u001b[31mTypeError\u001b[39m: HasTraits.observe() missing 1 required positional argument: 'handler'"
+     ]
     }
    ],
    "source": [
-    "#TODO round the edges to 5 or 10 persentiles\n",
     "#add a widget to select two years and display a hystogram for countiries' gdp change (%) between the selected years\n",
-    "def display_gdp_change(year1:str, year2:str, num_bins:int, df:pd.DataFrame)->None:   \n",
-    "    \"\"\"\n",
-    "    Display the GDP change between two selected years for all the countires.\n",
-    "    This function filters the dataframe for the two selected years and calculates the percentage change in GDP.\n",
-    "    It then calculates a hystogram of the percentage change and displays it as a bar chart.\n",
-    "    The function takes two parameters: year1 and year2, which are the years to compare.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    year1 (int): The first year to compare.\n",
-    "    year2 (int): The second year to compare.\n",
-    "    num_bins (int): The number of bins to use for the histogram.\n",
-    "    df (pd.DataFrame): The DataFrame to use for the comparison.\n",
-    "    \n",
-    "    Returns:\n",
-    "    None\n",
-    "    \"\"\"\n",
-    "    #add a non-country indicator to the DataFrame\n",
-    "    df = add_country_indicator(df)\n",
-    "    #filter the dataframe for the non-country rows\n",
-    "    df = df[df['Is Country'] == 0]\n",
-    "    # filter the dataframe for the two selected years\n",
-    "    gdp_change = df[['Country Name', year1, year2]]\n",
-    "    gdp_change = gdp_change.rename(columns={year1: 'Year1', year2: 'Year2'})\n",
-    "    gdp_change = gdp_change.dropna()\n",
-    "    # calculate the percentage change between the two years\n",
-    "    gdp_change['Change (%)'] = ((gdp_change['Year2'] - gdp_change['Year1']) / gdp_change['Year1']) * 100\n",
-    "    # sort the data frame by the percentage change\n",
-    "    gdp_change = gdp_change.sort_values(by='Change (%)', ascending=False)\n",
+    "\n",
+    "def display_gdp_change(gdp_change:pd.DataFrame, num_bins:int, min_edge:int, max_edge:int)->None:   \n",
+    "    print(f\"function display_gdp_change called with num_bins = {num_bins}, min_edge = {min_edge}, max_edge = {max_edge}\")\n",
+    "    edges = np.arange(min_edge, max_edge, num_bins + 1)\n",
+    "    #edges = list(range(min_edge, max_edge, grain))\n",
     "    # create a histogram of the percentage change\n",
-    "    histogram = pd.cut(gdp_change['Change (%)'],bins=num_bins)\n",
+    "    histogram = pd.cut(gdp_change['Change (%)'],bins=edges)\n",
     "    # Get the counts and sorted bins\n",
     "    counts = histogram.value_counts().sort_index()\n",
     "    bins = histogram.cat.categories\n",
     "    # Compute edges and widths\n",
-    "    edges = [interval.left for interval in bins] + [bins[-1].right]\n",
+    "   # edges = [interval.left for interval in bins] + [bins[-1].right]\n",
     "    left_edges = edges[:-1]\n",
     "    widths = [interval.right - interval.left for interval in bins]\n",
-    "    \n",
-    "    plt.title(f\"GDP Change from {year1} to {year2}\")    \n",
-    "    plt.xlabel('GDP Change (%)')\n",
     "    left_edges = [i.left for i in bins]\n",
-    "    print(\"left edges = \", left_edges)\n",
-    "    print(\"values = \", counts)\n",
     "    plt.bar(left_edges, counts, width=widths, align='edge', color='violet')\n",
     "    plt.xticks(edges, rotation=45)\n",
-    "    plt.title(f\"GDP Change from {year1} to {year2}\") \n",
+    "    plt.title(f\"GDP Change from year1 to year2\") \n",
     "    plt.ylabel('Country count')\n",
     "    plt.xlabel('GDP Change persentiles (%)')\n",
     "    plt.grid()\n",
@@ -346,19 +309,78 @@
     ")\n",
     "year2_dropdown = widgets.Dropdown(\n",
     "    options=years,\n",
+    "    value = years[-1],\n",
     "    description='Year 2:',\n",
     "    disabled=False,\n",
     ")\n",
-    "#create a widget for the number of bins\n",
-    "num_bins_slider = widgets.IntSlider(\n",
-    "    value=10,\n",
+    "#create a widget for the grain\n",
+    "grain_slider = widgets.IntSlider(\n",
+    "    value=5,\n",
     "    min=1,\n",
     "    max=25,\n",
     "    step=1,\n",
-    "    description='Number of bins:',\n",
+    "    description='Grain:',\n",
     "    continuous_update=False,\n",
     "    disabled=False,\n",
     ")\n",
+    "\n",
+    "#add a non-country indicator to the DataFrame\n",
+    "df = add_country_indicator(df)\n",
+    "#filter out all non-country rows\n",
+    "df_countries = df[add_country_indicator(df)['Is Country'] == 1]\n",
+    "\n",
+    "# compute the filtered dataset for the selected years\n",
+    "#gdp_change = compute_gdp_change(year1_dropdown.value, year2_dropdown.value, df_countries)\n",
+    "#print(f\"{gdp_change['Country Name'].count()} countries found with data for the selected years {year1_dropdown.value} and {year2_dropdown.value}.\")\n",
+    "#grain = grain_slider.value\n",
+    "# compute the min and max values for the histogram\n",
+    "#min_val = math.floor(gdp_change['Change (%)'].min() / grain) * grain\n",
+    "#max_val = math.ceil(gdp_change['Change (%)'].max() / grain) * grain\n",
+    "\n",
+    "#display the min and max values\n",
+    "#print(f\"Min value: {min_val}\")\n",
+    "#print(f\"Max value: {max_val}\")\n",
+    "# compute the allowed bin numbers\n",
+    "#allowed_bins = compute_allowed_bin_numbers(min_val, max_val, grain)\n",
+    "allowed_bins = [0]\n",
+    "\n",
+    "def update_bin_options(*args):\n",
+    "    # Recompute gdp_change and min/max\n",
+    "    gdp_change = compute_gdp_change(year1_dropdown.value, year2_dropdown.value, df_countries)\n",
+    "    grain = grain_slider.value\n",
+    "    min_val = math.floor(gdp_change['Change (%)'].min() / grain) * grain\n",
+    "    max_val = math.ceil(gdp_change['Change (%)'].max() / grain) * grain\n",
+    "    print(f\"Min value: {min_val}\")\n",
+    "    print(f\"Max value: {max_val}\")\n",
+    "    # Compute allowed bin numbers\n",
+    "    allowed_bins = compute_allowed_bin_numbers(min_val, max_val, grain)\n",
+    "\n",
+    "    # Update dropdown options\n",
+    "    num_bins_dropdown.options = allowed_bins\n",
+    "    num_bins_dropdown.value = allowed_bins[0]\n",
+    "\n",
+    "    # Optional: print stats\n",
+    "    print(f\"{len(gdp_change)} countries found\")\n",
+    "    print(f\"Min: {min_val}, Max: {max_val}\")\n",
+    "    return gdp_change, min_val, max_val\n",
+    "\n",
+    "\n",
+    "\n",
+    "# create a dropdown widget for the number of bins\n",
+    "num_bins_dropdown = widgets.Dropdown(\n",
+    "    options=allowed_bins,\n",
+    "    value=allowed_bins[0],\n",
+    "    description='Number of bins:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "\n",
+    "year1_dropdown.observe(update_bin_options, names='value')\n",
+    "year2_dropdown.observe(update_bin_options, names='value')\n",
+    "grain_slider.observe(update_bin_options, names='value')\n",
+    "num_bins_dropdown.observe(\n",
+    "    names='value')\n",
+    "\n",
+    "\n",
     "# create a button to display the GDP change\n",
     "gdp_change_button = widgets.Button(\n",
     "    description='Display GDP Change',\n",
@@ -379,10 +401,11 @@
     "    \"\"\"\n",
     "    with output:\n",
     "        clear_output(wait=True)\n",
-    "        display_gdp_change(str(year1_dropdown.value), str(year2_dropdown.value), int(num_bins_slider.value), df)\n",
+    "        gdp_change, min_val, max_val = update_bin_options()\n",
+    "        display_gdp_change(gdp_change, int(num_bins_dropdown.value), min_val, max_val)\n",
     "gdp_change_button.on_click(on_button_click)\n",
     "# display the dropdown widgets and the button\n",
-    "display(year1_dropdown, year2_dropdown, num_bins_slider, gdp_change_button, output)"
+    "display(year1_dropdown, year2_dropdown, grain_slider, num_bins_dropdown, gdp_change_button, output)"
    ]
   },
   {
