fix bugs, upgrade the consistency check of Sequential layer

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -25,18 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "970a1e45",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from abc import ABC, abstractmethod, property"
+    "from abc import ABC, abstractmethod"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e89cde36",
    "metadata": {},
    "outputs": [],
@@ -175,17 +175,28 @@
     "    \n",
     "class Sequential(Layer):\n",
     "    def __init__(self, layers: list):\n",
-    "        assert len(self.layers) > 0, \"Sequential model must have at least one layer.\"\n",
     "        self.layers = layers\n",
     "        super().__init__(layers[0].input_dim, layers[-1].output_dim)\n",
-    "        self.__check_dimensions__()\n",
+    "        self.__check_consistency__()\n",
     "\n",
-    "    def __check_dimensions__(self):\n",
-    "        for i in range(len(self.layers) - 1):\n",
-    "            assert self.layers[i].output_dim == self.layers[i + 1].input_dim, f\"Layer {i} output dimension {self.layers[i].output_dim} does not match Layer {i + 1} input dimension {self.layers[i + 1].input_dim}\"\n",
+    "    def __check_consistency__(self):\n",
+    "        assert len(self.layers) > 0, \"Sequential model must have at least one layer.\"\n",
+    "        assert self.layers[0].input_dim is not None, \"First layer input dimension must be specified.\"\n",
+    "        assert self.layers[-1].output_dim is not None, \"Last layer output dimension must be specified.\"\n",
     "        assert self.layers[0].input_dim == self.input_dim, f\"First layer input dimension {self.layers[0].input_dim} does not match expected input dimension {self.input_dim}\"\n",
     "        assert self.layers[-1].output_dim == self.output_dim, f\"Last layer output dimension {self.layers[-1].output_dim} does not match expected output dimension {self.output_dim}\"\n",
-    "\n",
+    "        current_dim = self.input_dim\n",
+    "        mismatch_list = []\n",
+    "        for layer in self.layers:\n",
+    "            if layer.input_dim != None:\n",
+    "                if layer.input_dim != current_dim: \n",
+    "                    mismatch_list.append(f\"Layer {layer.__class__.__name__} input dimension {layer.input_dim} does not match expected input dimension {current_dim}\")\n",
+    "                current_dim = layer.output_dim\n",
+    "        if current_dim != self.layers[-1].input_dim: \n",
+    "            mismatch_list.append(f\"Last layer input dimension {self.layers[-1].input_dim} does not match expected input dimension {current_dim}\")\n",
+    "        assert len(mismatch_list) == 0, f\"Layer dimension mismatch: {'\\n'.join(mismatch_list)}\"\n",
+    "            \n",
+    "             \n",
     "    def forward(self, x: np.ndarray) -> np.ndarray:\n",
     "        assert x.shape[1] == self.layers[0].input_dim, f\"Input shape {x.shape} does not match expected shape (batch_size, {self.layers[0].input_dim})\"\n",
     "        for layer in self.layers:\n",
