implement MSE, CrossEntropy and SGD

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -208,6 +208,74 @@
     "            grad = layer.backward(grad)\n",
     "        return grad"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb14196b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define concrete implementation of Loss: MeanSquaredError and CrossEntropy\n",
+    "\n",
+    "class MeanSquaredError(Loss):\n",
+    "    def forward(self, y_true: np.ndarray, y_pred: np.ndarray) -> float:\n",
+    "        assert y_true.shape == y_pred.shape, f\"True labels shape {y_true.shape} does not match predicted labels shape {y_pred.shape}\"\n",
+    "        return np.mean(np.square(y_true - y_pred))\n",
+    "\n",
+    "    def backward(self, y_true: np.ndarray, y_pred: np.ndarray) -> np.ndarray:\n",
+    "        assert y_true.shape == y_pred.shape, f\"True labels shape {y_true.shape} does not match predicted labels shape {y_pred.shape}\"\n",
+    "        return 2 * (y_pred - y_true) / y_true.size\n",
+    "    \n",
+    "    \n",
+    "class CrossEntropy(Loss):\n",
+    "    def forward(self, y_true: np.ndarray, y_pred: np.ndarray) -> float:\n",
+    "        assert y_true.shape == y_pred.shape, f\"True labels shape {y_true.shape} does not match predicted labels shape {y_pred.shape}\"\n",
+    "        # Clip predictions to prevent log(0)\n",
+    "        y_pred = np.clip(y_pred, 1e-15, 1 - 1e-15)\n",
+    "        return -np.mean((y_true * np.log(y_pred) + (1 - y_true) * np.log(1 - y_pred)), axis=1)\n",
+    "\n",
+    "    def backward(self, y_true: np.ndarray, y_pred: np.ndarray) -> np.ndarray:\n",
+    "        assert y_true.shape == y_pred.shape, f\"True labels shape {y_true.shape} does not match predicted labels shape {y_pred.shape}\"\n",
+    "        # Clip predictions to prevent division by zero\n",
+    "        y_pred = np.clip(y_pred, 1e-15, 1 - 1e-15)\n",
+    "        return (y_pred - y_true) / (y_pred * (1 - y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cca352b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define concrete implementation of Optimizer: SGD\n",
+    "\n",
+    "class SGD(Optimizer):\n",
+    "    def __init__(self, learning_rate: float = 0.01):\n",
+    "        assert learning_rate > 0, \"Learning rate must be a positive number.\"\n",
+    "        self.learning_rate = learning_rate\n",
+    "\n",
+    "    def step(self, params: np.ndarray, grads: np.ndarray) -> None:\n",
+    "        assert params.shape == grads.shape, f\"Parameters shape {params.shape} does not match gradients shape {grads.shape}\"\n",
+    "        params -= self.learning_rate * grads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed26f1aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba90a693",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
